# modsefa

./: .gitignore  README.md  cabal.project  config.json  flake.nix  hie.yaml  modsefa.cabal
client/Modsefa/: Client.hs
client/Modsefa/Client/: ActionParams.hs  Shortcuts.hs  TransactionRunner.hs  Types.hs  Utils.hs  Wallet.hs
client/Modsefa/Client/ActionParams/: TH.hs  Types.hs
docs/api-reference/: _category.json  action-spec.md  app-spec.md  client.md  state-definition.md  test-utilities.md  validator-spec.md
docs/getting-started/: _category.json  contributor-setup.md  core-concepts.md  quick-start.md
docs/introduction/: _category.json  design.md  introduction.md
examples/Modsefa/Examples/Feed/: Client.hs  Generated.hs  Scripts.hs  Spec.hs  Test.hs  Types.hs  Validators.hs
examples/Modsefa/Examples/Subscription/: Client.hs  Generated.hs  Scripts.hs  Spec.hs  Test.hs  Types.hs  Validators.hs
nix/: hix.nix  shell-hook.sh
scripts/: key-to-address.sh  keydelete.sh  keygen.sh  keylist.sh
src/Modsefa/CodeGen/: Generation.hs
src/Modsefa/CodeGen/Generation/: Constraints.hs  InstanceChecks.hs  Logic.hs  State.hs  Validators.hs  ValueResolution.hs
src/Modsefa/Core/: Actions.hs  Foundation.hs  Singletons.hs  Transaction.hs  Validation.hs  ValidatorScript.hs
src/Modsefa/Core/Foundation/: App.hs  Constraints.hs  TypeFamilies.hs  Types.hs  Validator.hs
src/Modsefa/Core/IR/: Compiler.hs  Types.hs
src/Modsefa/Core/Singletons/: Analysis.hs  Auto.hs  Types.hs
src/Modsefa/Core/Transaction/: Analysis.hs  Builder.hs  Constraints.hs  Context.hs  Operations.hs  Parameters.hs  Predicate.hs  Types.hs  Utils.hs
test-utils/Modsefa/Test/: GenericCorruption.hs  Harness.hs  RefAwareMutation.hs
